[package]
name = "dust"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui-plot = { git = "https://github.com/harc-lang/gpui-plot.git" }
gpui-schema = { git = "https://github.com/harc-lang/gpui-schema.git" }
driver = { path = "driver", features = ["gpui"] }
gpui = "0.2"
gpui-component = "0.5"
anyhow = "1"
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
