[package]
name = "driver"
version = "0.1.0"
edition = "2024"
description = "Generic simulation driver framework with CLI, REPL, and TUI frontends"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rmp-serde = "1"
schemars = "1"
serde_json = "1"
rustyline = "15"
ratatui = "0.30"
crossterm = "0.29"
schema-tui = { path = "../../schema-tui" }
