[package]
name = "driver"
version = "0.1.0"
edition = "2024"
description = "Generic simulation driver framework with CLI, REPL, and TUI frontends"
license = "MIT"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:schema-tui"]
gpui = ["dep:gpui", "dep:gpui-component"]

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rmp-serde = "1"
schemars = "1"
serde_json = "1"
rustyline = "15"
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
schema-tui = { git = "https://github.com/harc-lang/schema-tui.git", optional = true }
gpui = { version = "0.2", optional = true }
gpui-component = { version = "0.5", optional = true }
